<resources>
    <string name="app_name">MyApplication1</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>